# nex-os

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  index.html
.github/workflows/: ci.yml
.wrangler/cache/: pages.json
benches/: nexos_bench.rs
docs/: API.md  ARCHITECTURE.md  COMMANDS.md  DEPLOYMENT.md  DEVELOPMENT.md
src/: lib.rs  shell.rs  vfs.rs
src/command/: basename.rs  cat.rs  cd.rs  chmod.rs  chown.rs  clear.rs  comm.rs  cp.rs  cut.rs  date.rs  diff.rs  dirname.rs  download.rs  du.rs  echo.rs  env.rs  exit.rs  export.rs  find.rs  grep.rs  groupadd.rs  groups.rs  head.rs  help.rs  history.rs  hostname.rs  id.rs  ln.rs  ls.rs  man.rs  mkdir.rs  mod.rs  mount.rs  mv.rs  nl.rs  passwd.rs  paste.rs  printf.rs  pwd.rs  rev.rs  (+17 more)
src/shell/: dispatch.rs  mod.rs  pipeline.rs
src/vfs/: host_fs.rs  host_fs_wasm.rs  mod.rs  node.rs  permissions.rs  tree.rs  user_db.rs
tests/: shell_tests.rs
web/: auth.ts  host-fs.ts  index.html  input.ts  main.ts  package-lock.json  package.json  persistence.ts  shell.ts  style.css  terminal.ts  tsconfig.json  vite.config.ts
