[package]
name = "nexos"
version = "0.1.0"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "nexos_bench"
harness = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[profile.bench]
opt-level = 3
lto = false
codegen-units = 16
